Add CLI with info, read, and sample commands
Adds argparse-based CLI with three subcommands:
- info: Show file stats (line count, size, index status) with --json flag
- read: Print specific lines by number with --pretty flag
- sample: Random sample of n records with --seed and --pretty flags

Both entry points supported:
- jsonl-index command (via pyproject.toml console script)
- python -m jsonl_resumable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ classifiers = [
     "Typing :: Typed",
 ]
 
+[project.scripts]
+jsonl-index = "jsonl_resumable.cli:main"
+
 [project.urls]
 Homepage = "https://github.com/pranavtotla/jsonl-resumable"
 Repository = "https://github.com/pranavtotla/jsonl-resumable"
