--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "jsonl-resumable"
-version = "0.4.0"
+version = "0.5.0"
 description = "O(1) resume for large JSONL streams via byte-offset indexing"
 readme = "README.md"
 license = "MIT"
@@ -38,6 +38,7 @@ Issues = "https://github.com/pranavtotla/jsonl-resumable/issues"
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "pytest-asyncio>=0.23",
     "ruff>=0.1",
     "mypy>=1.0",
 ]
@@ -59,3 +60,4 @@ strict = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 addopts = "-v"
+asyncio_mode = "auto"
